projetos/desafio-final-dk8s/semana-2/aws/ingress/ingress-auditoria.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tipsbank-contas-ingress
  namespace: tipsbank-auditoria
  labels:
    app: auditoria
    app.kubernetes.io/name: auditoria
    app.kubernetes.io/part-of: tipsbank
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    cert-manager.io/cluster-issuer: "prod-letsencrypt-cloudflare"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - api.tipsbank.staypuff.info
      secretName: api-tipsbank-tls
  rules:
    - host: api.tipsbank.staypuff.info
      http:
        paths:
          - path: /auditoria(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: auditoria
                port:
                  number: 8080
